<?xml version="1.0"?>
<package format="2">
  <name>live_tracker</name>
  <version>0.0.0</version>
  <description>The live_tracker package</description>

  <maintainer email="william.a.richardson@vanderbilt.edu">Alex Richardson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <export>
  </export>
</package>
